--- a/kst/templates/kst/kst.html
+++ b/kst/templates/kst/kst.html
@@ -3,5 +3,14 @@
 
 {% block content %}
 
-{{q}}
+{{q.state}}
+
+{{q.text}}
+
+{{q.option1}}
+{{q.integer_type}}
+
+{{q.single_option}}
+
+{{q.integeral_type}}
 {% endblock %}
