--- a/kst/templates/kst/result.html
+++ b/kst/templates/kst/result.html
@@ -2,12 +2,23 @@
 
 
 {% block content %}
+
+<title>Assessment Score</title>
 <div class="container">
+    <br>
     <div class="row">
-        <h2 class="display-4">Congrats! Your assessment has been finished</h2>
+        <h2 class="display-4 ">Congrats! Your assessment has been finished</h2>
 
 
         <br>
+    </div>
+    <div class="mx-auto" style="width: 400px; margin-top: 15px; margin-bottom: 40px;">
+        <form action="{% url 'states:learning' %}" method="GET">
+            <button type="submit" style="width: 400px;" class="btn btn-outline-info mx-auto  btn-block">Start
+                Learning</button>
+        </form>
+
+
     </div>
 
 
@@ -36,7 +47,6 @@
             </div>
         </div>
     </div>
-
 
 </div>
 
