--- a/kst/templates/kst/result.html
+++ b/kst/templates/kst/result.html
@@ -9,11 +9,11 @@
     <div class="row">
         <h2 class="display-4 ">Congrats! Your assessment has been finished</h2>
 
-
+        {{state}}
         <br>
     </div>
     <div class="mx-auto" style="width: 400px; margin-top: 15px; margin-bottom: 40px;">
-        <form action="{% url 'states:learning' %}" method="GET">
+        <form action="#" method="GET">
             <button type="submit" style="width: 400px;" class="btn btn-outline-info mx-auto  btn-block">Start
                 Learning</button>
         </form>
