--- a/kst/templates/kst/base.html
+++ b/kst/templates/kst/base.html
@@ -42,7 +42,14 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Maths Blog</a>
+                        <a class="nav-link" href="{% url 'content:active' %}">Your Learning Part</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'check:start' %}">Your Assessment Result</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'check:map' %}">Mind Map</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><b>Logout</b></a>
