--- a/kst/templates/kst/result.html
+++ b/kst/templates/kst/result.html
@@ -13,7 +13,7 @@
         <br>
     </div>
     <div class="mx-auto" style="width: 400px; margin-top: 15px; margin-bottom: 40px;">
-        <form action="#" method="GET">
+        <form action="{% url 'content:active' %}" method="GET">
             <button type="submit" style="width: 400px;" class="btn btn-outline-info mx-auto  btn-block">Start
                 Learning</button>
         </form>
