--- a/kst/templates/kst/base.html
+++ b/kst/templates/kst/base.html
@@ -51,6 +51,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'check:map' %}">Mind Map</a>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'check:change' %}">Last State Result</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><b>Logout</b></a>
                     </li>
