--- a/kst/templates/kst/change.html
+++ b/kst/templates/kst/change.html
@@ -29,6 +29,7 @@
         var sr2 = parseInt("{{sr2}}");
         var sr3 = parseInt("{{sr3}}");
         var sr4 = parseInt("{{sr4}}");
+        var srr1 = parseInt("{{sr1}}");
         var chart = new CanvasJS.Chart("chartContainer", {
 
             theme: "light2",
