--- a/kst/templates/kst/base.html
+++ b/kst/templates/kst/base.html
@@ -49,7 +49,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'check:map' %}">Mind Map</a>
+                        <abase class="nav-link" href="{% url 'check:map' %}">Mind Map</a>
                     </li>
 
                     <li class="nav-item">
