--- a/kst/templates/kst/base.html
+++ b/kst/templates/kst/base.html
@@ -45,21 +45,24 @@
                         <a class="nav-link" href="{% url 'content:active' %}">Your Learning Part</a>
                     </li>
                     <li class="nav-item">
+
                         <a class="nav-link" href="{% url 'check:start' %}">Your Assessment Result</a>
                     </li>
 
                     <li class="nav-item">
-                        <abase class="nav-link" href="{% url 'check:map' %}">Mind Map</a>
+                        <a class="nav-link" href="{% url 'check:map' %}">Mind Map</a>
                     </li>
 
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'check:change' %}">Last State Result</a>
                     </li>
 
-                    x
+
 
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
+
+
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
