--- a/kst/templates/kst/base.html
+++ b/kst/templates/kst/base.html
@@ -9,6 +9,9 @@
 
 
 
+
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
 
@@ -45,7 +48,6 @@
                         <a class="nav-link" href="{% url 'content:active' %}">Your Learning Part</a>
                     </li>
                     <li class="nav-item">
-
                         <a class="nav-link" href="{% url 'check:start' %}">Your Assessment Result</a>
                     </li>
 
@@ -57,12 +59,12 @@
                         <a class="nav-link" href="{% url 'check:change' %}">Last State Result</a>
                     </li>
 
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><b>Logout</b></a>
+                    </li>
 
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-
-
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
