--- a/kst/templates/kst/change.html
+++ b/kst/templates/kst/change.html
@@ -3,15 +3,19 @@
 
 {% block content %}
 
+{% load static %}
+
 <div class="jumbotron" style="background: white;">
     <h1 class="display-4">Hello, {{user}}!</h1>
     <p class="lead">You have <mark>completed</mark> this state successfully!</p>
     <hr class="my-4">
 
 
+
     <p>Check your progress below and then you will be moved to next level</p>
     <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Proceed to learn next State</a>
+        <a class="btn btn-primary btn-lg" href="{% url "content:active" %}" role="button">Proceed to learn next
+            State</a>
     </p>
 </div>
 
