--- a/states/templates/states/illus.html
+++ b/states/templates/states/illus.html
@@ -1,33 +1,40 @@
-{{message}} <br>
-<br>
-You have completed :
-{{per_remaining}} %
-
-<br>
+{% extends 'kst/base.html' %}
 
 
-{% for i in illus %}
-{{i.content}} <br>
-{{i.text}} <br>
+{% block content %}
 
-{{i.answer}} <br>
 
-{{i.content}} <br><br><br>
-{% endfor %}
+
+
+
+
+<div class="container">
+    <div class="row">
+        {% for i in illus %}
+
+
+        <p> {{i.content}} </p>
+
+        <p> {{i.text}}</p>
+        <p> {{i.answer}}</p>
+
+        {% endfor %}
+    </div>
+</div>
+
+
+<p>You have completed :
+    {{per_remaining}} %</p>
 
 <form method="POST" action={% url 'content:illustrations' %}>
 
     {% csrf_token %}
 
-    <input type="submit">
+    <button class="btn btn-primary p-1 m-4 align-center" type="submit">Go Further</button>
 </form>
 
 
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+
+
+{% endblock %}
